--- a/src/main/resources/templates/form.html
+++ b/src/main/resources/templates/form.html
@@ -47,7 +47,7 @@
 					
 					<tr>
 						<td>Foto</td>
-						<td><input type="file" name="foto" class="form-control"/>
+						<td><input type="file" name="file" class="form-control"/>
 						</td>
 					</tr>
 					
