--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8"/>
 <title th:text="'Spring Boot:MVC + Thymeleaf + Data JPA - ' + ${titulo}"></title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+<link th:href="@{/css/jquery-ui.min.css}"/>
+
 </head>
 <body>
 
@@ -36,8 +38,10 @@
 
 <footer th:fragment="footer" class="container">
 	<hr/>
-	<img th:src="@{images/spring.png}" alt="Spring Logo" width="300px" height="150px"/>
+	<img th:src="@{/images/spring.png}" alt="Spring Logo" width="300px" height="150px"/>
 	<p>Powered by <a href="https://projets.spring.io/pring-boot/">Spring Boot</a> y <a href="http://www.thymeleaf.org">Thymeleaf</a></p>
+	<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+	<script th:src="@{/js/jquery-ui.min.js}"></script>
 </footer>
 </body>
 </html>
