--- a/src/main/resources/templates/listar.html
+++ b/src/main/resources/templates/listar.html
@@ -27,17 +27,19 @@
 						<th>apellido</th>
 						<th>e-mail</th>
 						<th>fecha</th>
+						<th>Crear factura</thz>
 						<th>editar</th>
 						<th>eliminar</th>
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="cliente:${clientes}">
-						<td th:text="${cliente.id}"></td>
+						<td><a class="btn btn-primary btn-xs" th:href="@{/ver/} + ${cliente.id}" th:text="${cliente.id}"></a></td>
 						<td th:text="${cliente.nombre}"></td>
 						<td th:text="${cliente.apellido}"></td>
 						<td th:text="${cliente.email}"></td>
 						<td th:text="${cliente.createAt}"></td>
+						<td><a class="btn btn-success btn-xs" th:href="@{'/factura/form/'+${cliente.id}}" th:text="'crear factura'"></a></td>
 						<td><a class="btn btn-primary btn-xs" th:href="@{/form/}+${cliente.id}" th:text="'editar'"></a></td>
 						<td><a class="btn btn-danger btn-xs" th:href="@{/eliminar/}+${cliente.id}" th:text="'eliminar'" onclick="return confirm('Está seguro que quiere eliminar');"></a></td>
 					</tr>
