--- a/src/main/resources/templates/factura/js/autocomplete-productos.html
+++ b/src/main/resources/templates/factura/js/autocomplete-productos.html
@@ -46,9 +46,13 @@
 				return false;
 			}
 		});
-	}
-			
-	);
+		
+		$("form").submit(function(){
+			$("#plantillaItemsFactura").remove();
+			console.log("Borrado");
+			return;
+		});
+	});
 	
 	var itemsHelper = {
 			
