--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:fragment="head">
 <meta charset="UTF-8"/>
 <title th:text="'Spring Boot:MVC + Thymeleaf + Data JPA - ' + ${titulo}"></title>
@@ -17,10 +17,28 @@
 	      <span class="navbar-toggler-icon"></span>
 	    </button>
 	    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-	      <div class="navbar-nav">
-	        <a class="nav-link active" aria-current="page" href="#">Home</a>
-	        <a class="nav-link" href="#" th:href="@{/listar}">Clientes</a>
-	      </div>
+			<div class="navbar-nav">
+			  <a class="nav-link active" aria-current="page" href="#">Home</a>
+			  <a class="nav-link" href="#" th:href="@{/listar}">Clientes</a>
+			</div>
+
+	      	<ul class="navbar-nav navbar-right">
+	      		<li sec:authorize="!isAuthenticated()"><a class="btn btn-outline-primary" th:href="@{/login}">Sing In</a></li>
+	      		
+	      		<li class="dropdown" sec:authorize="isAuthenticated()">
+				  <a class="btn btn-outline-primary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+				    <span sec:authentication="name"></span>
+				  </a>
+				
+				  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+					<form id="logoutForm" th:action="@{/logout}" method="post">
+						<button onClick="document.getElementById('logoutForm').submit();" type="submit" class="dropdown-item">Sing Out</button>
+						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"></input>
+					</form>
+				  </div>
+				</li>
+	      	</ul>
+	  
 	    </div>
 	  </div>
 	</nav>
@@ -39,8 +57,13 @@
 <footer th:fragment="footer" class="container">
 	<hr/>
 	<img th:src="@{/images/spring.png}" alt="Spring Logo" width="300px" height="150px"/>
+	<p sec:authorize="isAuthenticated()">
+		Usuario logeado: <span sec:authentication="name"></span> | Roles: <span sec:authentication="principal.authorities"></span>
+	</p>
 	<p>Powered by <a href="https://projets.spring.io/pring-boot/">Spring Boot</a> y <a href="http://www.thymeleaf.org">Thymeleaf</a></p>
 	<script th:src="@{/js/jquery-3.7.1.min.js}"></script>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 	<script th:src="@{/js/jquery-ui.min.js}"></script>
 </footer>
 </body>
