--- a/src/main/resources/templates/ver.html
+++ b/src/main/resources/templates/ver.html
@@ -1,58 +1,71 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="layout/layout :: head"></head>
 <body>
 
 	<header th:replace="layout/layout :: header"></header>
-	
+
 	<div class="container py-4">
-	
+
 		<div class="card bg-light">
-		
+
 			<div class="card-header" th:text=${titulo}></div>
-			
+
 			<div class="card-body">
-			
-			<h4>
-				<a class="btn btn-primary btn-xs" th:href="@{'/factura/form/'+${cliente.id}}" th:text="'crear factura'"></a>
+
+				<h4>
+					<a sec:authorize="hasRole('ROLE_ADMIN')" class="btn btn-primary btn-xs"
+						th:href="@{'/factura/form/'+${cliente.id}}"
+						th:text="'crear factura'"></a>
 				</h4>
-			
-				<img th:if="${#strings.length(cliente.foto)>0}" th:src="@{'/uploads/' + ${cliente.foto}}" th:alt="${cliente.foto}" 
-				class="img-thumbnail rounded float-left" style="max-width:25%;"/>
+
+				<img th:if="${#strings.length(cliente.foto)>0}"
+					th:src="@{'/uploads/' + ${cliente.foto}}" th:alt="${cliente.foto}"
+					class="img-thumbnail rounded float-left" style="max-width: 25%;" />
 				<ul class="list-group">
 					<li class="list-group-item" th:text="${cliente.nombre}"></li>
 					<li class="list-group-item" th:text="${cliente.apellido}"></li>
 					<li class="list-group-item" th:text="${cliente.email}"></li>
 					<li class="list-group-item" th:text="${cliente.createAt}"></li>
 				</ul>
-				
-				<div th:if="${#lists.isEmpty(cliente.facturas)}" class="alert alert-info my-4" th:text="'No hay facturas asignadas para el cliente ' + ${cliente.nombre} + ' ' + ${cliente.apellido}"></div>
-				<table th:if="${not #lists.isEmpty(cliente.facturas)}" class="table table-bordered table-striped my-4">
+
+				<div th:if="${#lists.isEmpty(cliente.facturas)}"
+					class="alert alert-info my-4"
+					th:text="'No hay facturas asignadas para el cliente ' + ${cliente.nombre} + ' ' + ${cliente.apellido}"></div>
+				<table th:if="${not #lists.isEmpty(cliente.facturas)}"
+					class="table table-bordered table-striped my-4">
 					<thead class="thead-dark">
 						<tr>
 							<th>folio</th>
 							<th>descripcion</th>
 							<th>fecha</th>
 							<th>total</th>
-						</tr>					
-					</thead>
-						<tr th:each="factura:${cliente.facturas}">
-							<td th:text="${factura.id}"></td>
-							<td th:text="${factura.descripcion}"></td>
-							<td th:text="${factura.createAt}"></td>
-							<td th:text="${factura.total}"></td>
+							<th sec:authorize="hasRole('ROLE_ADMIN')">ver</th>
+							<th sec:authorize="hasRole('ROLE_ADMIN')">eliminar</th>
 						</tr>
-				
+					</thead>
+					<tr th:each="factura:${cliente.facturas}">
+						<td th:text="${factura.id}"></td>
+						<td th:text="${factura.descripcion}"></td>
+						<td th:text="${factura.createAt}"></td>
+						<td th:text="${factura.total}"></td>
+						<td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{'/factura/ver/' + ${factura.id}}"
+							th:text="'detalle'" class="btn btn-primary btn-xs"></a></td>
+						<td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{'/factura/eliminar/' + ${factura.id}}"
+							th:text="'eliminar'" class="btn btn-danger btn-xs"
+							onclick="return confirm('¿Está seguro que desea eliminar la factura?');"></a></td>
+					</tr>
+
 
 					<tbody>
-					
+
 					</tbody>
 				</table>
-				
+
 			</div>
-		
+
 		</div>
-	
+
 	</div>
 
 </body>
